public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/43/source/compile
source.c: In function ‘main’:
source.c:13:2: error: expected ‘}’ before ‘else’
  else {
  ^
